customer/3-client-natgateway.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC: NAT Gateway'
Parameters:
  VPCStackName: 
    Description: 'Name of an active cloudformation stack that contains the VPC Networking
      resources, such as the route tables and subnets.'
    Type: String
    MinLength: 1
    MaxLength: 255
    Default: 'stack name'

  EnvName:
    Description: 'Name to tag resources with. Note must be lowercase!'
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z]*'
    ConstraintDescription: any alphabetic string (1-16) characters in length
    Default: client
 
Resources:
  EIP1:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  EIP2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      
  NatGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP1.AllocationId'
      SubnetId: !ImportValue
        'Fn::Sub': '${VPCStackName}-SubnetAPublic'
      Tags:
        - Key: Name
          Value: !Join
            - ' '
            - - !Ref EnvName
              - 'NAT Gateway1'
        - Key: EnvName
          Value: !Ref EnvName
          
  NatGateway2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP2.AllocationId'
      SubnetId: !ImportValue
        'Fn::Sub': '${VPCStackName}-SubnetBPublic'
      Tags:
        - Key: Name
          Value: !Join
            - ' '
            - - !Ref EnvName
              - 'NAT Gateway2'
        - Key: EnvName
          Value: !Ref EnvName

  PrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: {'Fn::ImportValue': !Sub '${VPCStackName}-RouteTableAPrivate'}
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway1
       
  PrivateRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: {'Fn::ImportValue': !Sub '${VPCStackName}-RouteTableBPrivate'}
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway2

Outputs:
  StackName:
    Description: 'Stack name.'
    Value: !Sub '${AWS::StackName}'
  IPAddress1:
    Description: 'The public IP address of the NAT gateway 1.'
    Value: !Ref EIP1
    Export:
      Name: !Sub '${AWS::StackName}-IPAddress1'
  IPAddress2:
    Description: 'The public IP address of the NAT gateway 2.'
    Value: !Ref EIP2
    Export:
      Name: !Sub '${AWS::StackName}-IPAddress2'
